<resources>
    <string name="app_name">K-onda</string>
    <string name="main_text1">Se enviara un mensaje SMS para verificar tu número de telefono
        Confirma tu código de país e introduce tu número de teléfono </string>
    <string name="main_hint">Teléfono</string>
    <string name="main_button_text">ENVIAR CODIGO</string>
    <string name="code_verification_textView_title">Verificación por SMS</string>
    <string name="code_verification_text1">Esperando la detección automática de un SMS - de no ser así Ingresa el código de 6 dígitos </string>
    <string name="code_verification_editText_hint">------</string>
    <string name="code_verification_button">Verificar</string>
    <string name="code_verification_progressbar">Enviando SMS</string>
    <string name="code_verification_textView_sms">Validando código</string>
    <string name="on_complete_info_textView">Editar Perfil</string>
    <string name="on_complete_info_textView_Picture">Añade una foto </string>
    <string name="on_complete_info_textInput">Nombre de usuario</string>
    <string name="on_complete_info_button">Registrar</string>
    <string name="home_button_logOut">Cerrar Sesión</string>
    <string name="home_materialSearchBar">Buscar..</string>
    <string name="home_placeholder">K-Onda</string>
    <string name="menu_item_logOut">Cerrar Sesión</string>
    <string name="menu_item_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Chat fragment</string>
    <string name="hello_blank_fragment2">Hello Contact fragment</string>
    <string name="hello_blank_fragment3">Hello Status fragment</string>
    <string name="profile_tv_name">Nombre</string>
    <string name="profile_tv_username">Nombre de Usuario</string>
    <string name="profile_tv_username_description">Este nombre será visible para tus contactos de K-onda</string>
    <string name="profile_tv_info_user">Info</string>
    <string name="profile_tv_info_user_description">Estoy usando K-onda</string>
    <string name="profile_tv_phone">Teléfono</string>
    <string name="profile_tv_phone_description">+00000000000</string>
    <string name="bottom_sheet_choose_image_tv1">Foto de perfil</string>
    <string name="bottom_sheet_choose_image_tv2">Eliminar Foto</string>
    <string name="bottom_sheet_choose_image_tv3">Galería</string>
    <string name="bottom_sheet_change_username_tv">Nombre</string>
    <string name="bottom_sheet_change_username_btn_cancel">Cancelar</string>
    <string name="bottom_sheet_change_username_btn_save">Guardar</string>
    <string name="bottom_sheet_change_info_tv">Info</string>
    <string name="bottom_sheet_change_info_btn_cancel">Cancelar</string>
    <string name="bottom_sheet_change_info_btn_save">Guardar</string>
    <string name="cardview_contacts_username">Nombre de usuario</string>
    <string name="cardview_contacts_userstatus">Estado...</string>
    <string name="chat_et_message">Escribe un mensaje</string>
    <string name="char_toolbar_tv_username">Nombre de usuario</string>
    <string name="char_toolbar_tv_useronline"></string>
    <string name="cardview_chats_username">Nombre de usuario</string>
    <string name="cardview_chats_timestamp">6:00 pm</string>
    <string name="cardview_chats_userLastMsg">Ultimo mensaje...</string>

</resources>