<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <!--xml(layout) que aparece cuando se selecciona cambiar imagen de perfil en profile activity-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_change_info_tv"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/bottom_sheet_change_info_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/bottom_sheet_change_info_btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet_change_username_btn_cancel"
                android:textColor="@color/aqua"/>

            <Button
                android:id="@+id/bottom_sheet_change_info_btn_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet_change_username_btn_save"
                android:textColor="@color/aqua"/>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>