<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <!-- Crear un toolbar class y luego agregar aqui para poder usarlo -->
    <include layout="@layout/action_bar_toolbar"/>


    <!-- usar el behavior para que no se posicione arriba del toolbar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <!-- Nos permite poner elementos encima de otros -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layerType="software">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_ci_imageprofile"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_person_white"
                app:civ_circle_background_color="@color/grayLight" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profile_chooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@null"
                android:src="@drawable/ic_camera_white" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_person_green" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_name" />

                <TextView
                    android:id="@+id/profile_tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_username"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/profile_tv_username_description"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/profile_iv_icon_edit_username"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_edit_gray" />

        </LinearLayout>

        <!-- Linea divisora-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/grayLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_info_green" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_info_user" />

                <TextView
                    android:id="@+id/profile_tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_info_user_description"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/profile_iv_icon_edit_info"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_edit_gray" />

        </LinearLayout>

        <!-- Linea divisora-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/grayLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_phone_green" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_phone" />

                <TextView
                    android:id="@+id/profile_tv_phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tv_phone_description"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>