<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CodeVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">

            <!-- YOUR CONTENT -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription= "@null"
                android:src="@drawable/k_ondapp" />

        </com.github.florent37.shapeofview.shapes.ArcView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/code_verification_text1"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="22sp" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/code_verification_editText_hint"
            android:autofillHints="@string/code_verification_editText_hint"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_codeVerification_codeVerification"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/code_verification_button"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>